--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "echarts": "^5.4.2",
+    "element-ui": "^2.15.13",
+    "express": "^4.18.2",
+    "js-cookie": "^3.0.5",
+    "less": "^4.1.3",
+    "less-loader": "^6.0.0",
+    "mockjs": "^1.1.0",
+    "mysql": "^2.18.1",
+    "vue": "^2.6.14",
+    "vue-router": "^3.6.5",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
