--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.15.13",
     "express": "^4.18.2",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
     "less": "^4.1.3",
     "less-loader": "^6.0.0",
     "mockjs": "^1.1.0",
