--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql": "^2.18.1",
     "vue": "^2.6.14",
     "vue-router": "^3.6.5",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
